--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
+    "@types/node": "22.2.0",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
